--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Matheus Massari <massari.matheus@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev --exit-child src/app.ts"
   },
   "dependencies": {
     "@prisma/client": "3.2.1",
